tools/architecture/validate-source-imports/tests/fixtures/invalid/domain-imports-react/src/index.ts
import React from "react";
export const packageName = "@platform/domain-core";
